Update client data fix

--- a/resources/index.html
+++ b/resources/index.html
@@ -10,6 +10,13 @@
     <button id="btn"></button>
     
     <br>
+
+    <li>
+        <li id="lamp">lamp</li>
+        <li id="fire">fire</li>
+        <li id="lava">lava</li>
+    </li>
+    <br>
     
     <div>
         Brightness: <span id="brightnessValue"></span>
@@ -28,6 +35,12 @@
     <script>
         var socket = new WebSocket('ws://' + window.location.hostname + ':81/');
         const btn = document.getElementById('btn');
+
+        const lamp = document.getElementById('lamp');
+        const fire = document.getElementById('fire');
+        const lava = document.getElementById('lava');
+
+
         const brightnessSlider = document.getElementById('brightnessSlider');
         const scaleSlider = document.getElementById('scaleSlider');
 
@@ -50,6 +63,7 @@
         };
 
         socket.onmessage = function(event) {
+            console.log('event:' + event.data);
             if (event.data.startsWith('state:')) {
                 const state = event.data.substring(6);
                 updateButtonState(state === 'on');
@@ -57,12 +71,12 @@
             else if (event.data.startsWith('brightness:')) {
                 const brightness = event.data.substring(11);
                 brightnessValue.innerText = brightness;
-                brightness.value = brightness;
+                brightnessSlider.value = brightness;
             }
             else if (event.data.startsWith('scale:')) {
                 const scale = event.data.substring(6);
                 scaleValue.innerText = scale;
-                brightnessSlider.value = scale;
+                scaleSlider.value = scale;
             }
         };
 
@@ -76,17 +90,35 @@
 
         //elems events
         btn.onclick = function() {
-            socket.send('switch');
+            socket.send('state');
+            console.log('state');
+        }
+
+        lamp.onclick = function() {
+            socket.send('mode:0');
+            console.log('mode:0');
+        }
+
+        fire.onclick = function() {
+            socket.send('mode:1');
+            console.log('mode:1');
+        }
+
+        lava.onclick = function() {
+            socket.send('mode:2');
+            console.log('mode:2');
         }
 
         brightnessSlider.oninput = function() {
             brightnessValue.innerText = this.value;
             socket.send('brightness:' + this.value);
+            console.log('brightness:' + this.value);
         }
 
         scaleSlider.oninput = function() {
             scaleValue.innerText = this.value;
             socket.send('scale:' + this.value);
+            console.log('scale:' + this.value);
         }
     </script>
 </body>
