Web design fixes, new effects added

--- a/data/index.html
+++ b/data/index.html
@@ -16,9 +16,10 @@
             </div>
             <hr />
             <div class="effects" id="effects">
-                <div>lamp</div>
+                <div>test</div>
                 <div>fire</div>
-                <div>lava</div>
+                <div>vrain</div>
+                <div>hrain</div>
             </div>
             <hr />
             <div class="slider">
