WiFi and Servers logic updated

--- a/data/index.html
+++ b/data/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="card-btn" id="card-btn-sta">
                     <img src="icons/sta.svg" alt="" />
-                    <span id="sta-text">Set new WiFi</span>
+                    <span id="sta-text">Set WiFi</span>
                 </div>
                 <hr />
                 <div class="card-btn" id="card-btn-ap">
