--- a/data/index.html
+++ b/data/index.html
@@ -16,10 +16,11 @@
             </div>
             <hr />
             <div class="effects" id="effects">
-                <div>lamp</div>
-                <div>hrain</div>
-                <div>vrain</div>
-                <div>snow</div>
+                <div>Lamp</div>
+                <div>Fire</div>
+                <div>RainH</div>
+                <div>RainV</div>
+                <div>Snow</div>
             </div>
             <hr />
             <div class="slider">
